fix qr code sizing on mobile, and adjust gallery sizing too

--- a/src/peergos.css
+++ b/src/peergos.css
@@ -217,6 +217,26 @@ table {
   padding: 10px;
 }
 
+.qrcode-container {
+    position: relative;
+    width: 400px;
+    height: 400px;
+}
+.qrcode {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@media (max-width: 600px) {
+    .qrcode-container {
+	padding-bottom: 100%;
+	width: 100%;
+	height: unset;
+    }
+}
+
 .modal-mask {
   position: fixed;
   z-index: 9998;
@@ -230,6 +250,7 @@ table {
 
 .modal-container {
   width: 50%;
+  height: 100%;
   margin: 0px auto;
   padding: 20px 30px;
   background-color: #fff;
@@ -242,6 +263,7 @@ table {
 @media (max-width: 600px) {
     .modal-container {
 	width: 100%;
+	height: 100%;
     }
 }
 
